syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jayden.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service HelloWorld {
    rpc sayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
